fixed spacing issues.

--- a/box-model.css
+++ b/box-model.css
@@ -2,23 +2,24 @@
     color: blue;
     border-color: blue;
     background-color: blue;
-    width: 300px;
+    width: 350px;
     height: 200px; 
-    padding-top: 75px;
+    padding-top: 50px;
 }
 
 
 .red-block {
     background-color: red; 
-    width: 150px;
-    height: 100px;
+    width: 200px;
+    height: 75px;
     margin-left: 75px;
-    padding-top: 75px;
+    padding-top: 50px;
+    padding-bottom: 25px;
 }
 
 .yellow-block {
     background-color: yellow;
-    width: 75px;
-    height: 60px;
-    margin-left: 30px;
+    width: 100px;
+    height: 50px;
+    margin-left: 50px;
 }
